--- a/CSS/tgist.css
+++ b/CSS/tgist.css
@@ -31,10 +31,10 @@ button,
 body {
   font-family: "Segoe UI", sans-serif;
   /* background: url(./images/supervisor-doing-checkup-data-center-workplace-verifying-reports-files.jpg); */
-  background: url(../Images/virtual-padlock-hologram-dark-blue-background-concept-network-security-cyber-security-network.jpg);
+  background: url(/Images/virtual-padlock-hologram-dark-blue-background-concept-network-security-cyber-security-network.jpg);
 }
 .one {
-  background: url(../Images/employee-monitoring-supercomputers-issues-such-as-overheating.jpg)
+  background: url(/Images/employee-monitoring-supercomputers-issues-such-as-overheating.jpg)
     no-repeat center center;
   background-size: cover;
   height: 1000px;
@@ -311,7 +311,7 @@ body {
   width: 100%;
   height: 600px;
   /* min-height: 90vh; */
-  background: url(../Images/virtual-padlock-hologram-dark-blue-background-concept-network-security-cyber-security-network.jpg)
+  background: url(/Images/virtual-padlock-hologram-dark-blue-background-concept-network-security-cyber-security-network.jpg)
     /* background: url("./images/8dc20b_07f1aa49c0ec48ffa1d1704192143b15.png") */
     no-repeat center center;
   background-size: cover;
@@ -349,7 +349,7 @@ body {
 }
 
 .fifth-container {
-  background: url("../Images/Copilot_20251124_201842.png") no-repeat;
+  background: url("/Images/Copilot_20251124_201842.png") no-repeat;
   /* height: 50%; */
   display: flex;
   flex-direction: column;
@@ -417,7 +417,7 @@ body {
 }
 
 .testimonial-section {
-  background: url(./images/th2.jpeg) no-repeat center center;
+  background: url(/images/th2.jpeg) no-repeat center center;
   background-size: cover;
   padding: 4rem 2rem;
   text-align: center;
